tree-sitter-czlang/test/corpus/function_call.txt
==================
Function call
==================

fun x() i32 {
  callFunction()
  callFunction(argument1, argument2)
  var test = callFunction()
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (function_call (identifier) (argument_list))
      (function_call (identifier) (argument_list
        (identifier) (identifier)))
      (var_declaration
        (identifier)
        (function_call
          (identifier)
          (argument_list)
        )
      )
    )
  )
)
