tree-sitter-czlang/test/corpus/var_declaration.txt
==================
Variable declarations
==================

fun x() i32 {
  var test = 5
  var test2 bool = true
  var test3 mut = "test"
  var test3 mut i32 = 34

  var test4 mut i32 = 34
  var test5 &mut i32 = 35
  var test6 &i32 = 36

  var test4? mut i32 = null
  var test5? &mut i32 = null
  var test6? &i32 = null
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (var_declaration (identifier) (int_literal))
      (var_declaration (identifier) (primitive_type) (true))
      (var_declaration (identifier) (interpreted_string_literal))
      (var_declaration (identifier) (primitive_type) (int_literal))
      (var_declaration (identifier) (primitive_type) (int_literal))
      (var_declaration (identifier) (primitive_type) (int_literal))
      (var_declaration (identifier) (primitive_type) (int_literal))
      (var_declaration (identifier) (primitive_type) (null))
      (var_declaration (identifier) (primitive_type) (null))
      (var_declaration (identifier) (primitive_type) (null))
    )
  )
)
